<resources>
    <string name="app_name">TrackTimes</string>

    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="add_train">Add Train</string>
    <string name="trains">Live</string>
    <string name="station_transition_name">station_selector</string>
    <string name="departing_from">Departing From</string>
    <string name="arriving_at">Arriving At (Optional)</string>
    <string name="find_trains">Find Trains</string>
    <string name="dep_search_transition">depStationTransition</string>
    <string name="favourites">Favourites</string>
    <string name="station_search_hint">Train station</string>
    <string name="no_services_found">No services found &#129300;</string>
    <string name="platform_prefix">Platform: %1$s</string>
    <string name="departure_text_transition">departureDestTransitionName</string>
    <string name="departure_background_transition">departureBackgroundTransition</string>
    <string name="planner">Planner</string>
    <string name="search_hint_focused">Station Name</string>
    <string name="settings">Settings</string>
    <string name="settings_button_content_description">Settings Button</string>
    <string name="loading_indicator_content_description">Loading indicator</string>
    <string name="on_time">On Time</string>
    <string name="error_no_destination">Please select a destination!</string>
    <string name="jouney_plan">Plan Journey</string>
    <string name="default_datetime">Today, now</string>
    <string name="date_key">date_string</string>
    <string name="default_railcard">No Railcards</string>
    <string name="railcard_title">Railcards</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="increment">+</string>
    <string name="railcards_chip_text">Railcards: %1$s</string>
    <string name="default_passengers">1</string>
    <string name="passenger_select_title">People</string>
    <string name="passenger_text">%1$s</string>
    <string name="error_more_railcards">Cannot have more railcards than people!</string>
    <string name="arriving_at_planner">Arriving At</string>
    <string name="chip_via_text">Via</string>
    <string name="direct_trains">Direct trains only</string>
    <string name="add_return">Add return</string>
    <string name="disruptions">Status</string>
    <string name="title_outbound">Outbound</string>
    <string name="title_return">Return</string>
    <string name="decrement">-</string>
    <string name="route_desc_template">%s 🚆 %s</string>
    <string name="depart_title">Departs</string>
    <string name="journey_info">Service Info</string>
    <string-array name="railcard_codes">
        <item name="yng">YNG</item>
        <item name="tsu">TSU</item>
        <item name="fam">FAM</item>
        <item name="jcp">JCP</item>
        <item name="dcr">DCR</item>
        <item name="dis">DIS</item>
        <item name="dcg">DCG</item>
        <item name="hmf">HMF</item>
        <item name="2tr">2TR</item>
        <item name="ngc">NGC</item>
        <item name="new">NEW</item>
        <item name="ndj">NDJ</item>
        <item name="srn">SRN</item>
        <item name="hrc">HRC</item>
    </string-array>
    <string-array name="railcards">
        <item name="yng">16–25</item>
        <item name="tsu">16–17</item>
        <item name="fam">Family &amp; Friends</item>
        <item name="jcp">Jobcentre Plus discount</item>
        <item name="dcr">Devon &amp; Cornwall</item>
        <item name="dis">Disabled Persons</item>
        <item name="dcg">Devon &amp; Cornwall Gold</item>
        <item name="hmf">HM Forces (MOD)</item>
        <item name="2tr">Two Together</item>
        <item name="ngc">Annual Gold (Network gold)</item>
        <item name="new">Network Railcard</item>
        <item name="ndj">New Deal Photocard Scotland</item>
        <item name="srn">Senior Railcard</item>
        <item name="hrc">Highland Railcard</item>
    </string-array>
    <string-array name="passenger_types">
        <item>Adults</item>
        <item>Children (4–14)</item>
    </string-array>
    <string-array name="live_update_values">
        <item>Delays</item>
        <item>Platform Updates</item>
        <item>Train Arrivals</item>
        <item>Train Departures</item>
    </string-array>
    <string name="journey_duration_format">%d hrs %d min</string>
    <string name="journey_changes_format">%d Changes</string>
    <string name="fastest">Fastest</string>
    <string name="cheapest">Cheapest</string>
    <string name="no_fare_text">No fare information</string>
    <string name="num_coaches_text">%s Coaches</string>
    <string name="unknown_coaches">🤷‍</string>
    <string name="map_parse_error">Map style parsing failed</string>
    <string name="toilets">🚽 Toilets:</string>
    <string name="staffing">🕴️ Staff:</string>
    <string name="seating_areas">💺 Seating:</string>
    <string name="food">🍜 Food:</string>
    <string name="showers">🚿 Showers:</string>
    <string name="baby_change">👶 Baby changing:</string>
    <string name="full_time">fullTime</string>
    <string name="full_time_description">Full time staff available</string>
    <string name="part_time">partTime</string>
    <string name="part_time_description">Part time staff available</string>
    <string name="no_time_description">Station is unstaffed</string>
    <string name="address_header">Address:</string>
    <string name="no_maps_installed">Maps application not installed</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="details_header">Information</string>
    <string name="default_notification_channel_id">tracktimes</string>
    <string name="watching">Watching</string>
    <string name="watching_train">"You will be alerted to updates "</string>
    <string name="watch_train">Set alert</string>
    <string name="reconnected">Internet Reconnected</string>
    <string name="disconnected">Internet not connected!</string>
    <string name="tracking">Alert successully added!</string>
    <string name="tracking_error">Failed to add alert!</string>
    <string name="information_button">Information button</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="live_updates_title">Set an alert</string>
    <string name="live_updates_positive">Set</string>
    <string name="live_updates_negative">Cancel</string>
    <string name="dep_board_template">%s</string>
    <string name="recent_search_title">Recent queries</string>
    <string name="no_stations_selected">Please select 1 or more stations</string>
    <string name="services_header">Services</string>
    <string name="empty_home_prompt">No favourite or recent queries,\ntry adding some…</string>
    <string name="empty_favourites_prompt">No favourites set, try adding some!</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="configure_widget_title">Widget Setup</string>
    <string name="favourites_button_content_desc">Favourites Button</string>
    <string name="btn_fav_text">Add Favourite</string>
    <string name="prefs">basic_preferences</string>
    <string name="toc_dest_sep_text">to</string>
    <string name="departing">Departures</string>
    <string name="arriving">Arrivals</string>
    <string name="previous_departures">Load Previous Departures</string>
    <string name="next_departures">Load Next Departures</string>
    <string name="circular_service_indication">Circular service</string>
    <string name="opacity">Opacity</string>
    <string name="nrcc_alert_title">Station Alerts</string>
    <string name="alert_switch_text">Alerts  </string>
    <string name="add_alert_button">Add alert button</string>
    <string name="track_service_modal_title">Live Updates</string>
    <string name="platform_updates_checkbox_text">Platform updates</string>
    <string name="delay_updates_checkbox_text">Delay notifications</string>
    <string name="delay_repay_checkbox_text">Auto compensation notification</string>
    <string name="track_service_btn_text">Track Service</string>
    <string name="route_desc_placeholder">%1$s to %2$s</string>
</resources>
